--- a/main.html
+++ b/main.html
@@ -1,7 +1,7 @@
 <html>
     <head>
-        <link href="site.css" rel="stylesheet" type="text/css">
-        <script type="type/javacript" src="main.js"></script>
+        <link href="./css/site.css" rel="stylesheet" type="text/css">
+        <script type="type/javacript" src="./js/main.js"></script>
         <title>Basic</title>
     </head>
     <body>
