--- a/src/main.html
+++ b/src/main.html
@@ -1,27 +1,27 @@
 <html>
     <head>
         <link href="./css/site.css" rel="stylesheet" type="text/css">
-        <script type="type/javacript" src="./js/main.js"></script>
+        <script type="text/javascript" src="./js/main.js"></script>
         <title>Basic</title>
     </head>
     <body>
-        <div class="span" onclick="assignX(0,0)">
+        <div class="span" onclick="assignX(event,0,0)">
         </div>
-        <div class="span" onclick="assignX(0,1)">
+        <div class="span" onclick="assignX(event,0,1)">
         </div>
-        <div class="span" onclick="assignX(0,2)">
+        <div class="span" onclick="assignX(event,0,2)">
         </div>
-        <div class="span" onclick="assignX(1,0)">
+        <div class="span" onclick="assignX(event,1,0)">
         </div>
-        <div class="span" onclick="assignX(1,1)">
+        <div class="span" onclick="assignX(event,1,1)">
         </div>
-        <div class="span" onclick="assignX(1,2)">
+        <div class="span" onclick="assignX(event,1,2)">
         </div>
-        <div class="span" onclick="assignX(2,0)">
+        <div class="span" onclick="assignX(event,2,0)">
         </div>
-        <div class="span" onclick="assignX(2,1)">
+        <div class="span" onclick="assignX(event,2,1)">
         </div>
-        <div class="span" onclick="assignX(2,2)">
+        <div class="span" onclick="assignX(event,2,2)">
         </div>
     </body>
 </html>
