--- a/src/main.html
+++ b/src/main.html
@@ -5,23 +5,27 @@
         <title>Basic</title>
     </head>
     <body>
-        <div class="span" onclick="assignX(event,0,0)">
+        <div id="div_00" class="span" onclick="assignX(event,0,0)">
         </div>
-        <div class="span" onclick="assignX(event,0,1)">
+        <div id="div_01" class="span" onclick="assignX(event,0,1)">
         </div>
-        <div class="span" onclick="assignX(event,0,2)">
+        <div id="div_02" class="span" onclick="assignX(event,0,2)">
         </div>
-        <div class="span" onclick="assignX(event,1,0)">
+        <div id="div_10" class="span" onclick="assignX(event,1,0)">
         </div>
-        <div class="span" onclick="assignX(event,1,1)">
+        <div id="div_11" class="span" onclick="assignX(event,1,1)">
         </div>
-        <div class="span" onclick="assignX(event,1,2)">
+        <div id="div_12" class="span" onclick="assignX(event,1,2)">
         </div>
-        <div class="span" onclick="assignX(event,2,0)">
+        <div id="div_20" class="span" onclick="assignX(event,2,0)">
         </div>
-        <div class="span" onclick="assignX(event,2,1)">
+        <div id="div_21" class="span" onclick="assignX(event,2,1)">
         </div>
-        <div class="span" onclick="assignX(event,2,2)">
+        <div id="div_22" class="span" onclick="assignX(event,2,2)">
+        </div>
+        <div id="winX" class="" style="display: none;">Jugador X ha ganado
+        </div>
+        <div id="winO" class="" style="display: none;">Jugador O ha ganado
         </div>
     </body>
 </html>
